@@ -1,4 +1,10 @@
-FROM adoptopenjdk/openjdk11-openj9:jdk-11.0.1.13-alpine-slim
-COPY target/mn-sample-api*.jar mn-sample-api.jar
+FROM oracle/graalvm-ce:19.0.0 as graalvm
+COPY . /home/app/mn-sample-api
+WORKDIR /home/app/mn-sample-api
+RUN gu install native-image
+RUN native-image --no-server -cp target/mn-sample-api-*.jar
+
+FROM frolvlad/alpine-glibc
 EXPOSE 8080
-CMD java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Dcom.sun.management.jmxremote -noverify ${JAVA_OPTS} -jar mn-sample-api.jar
+COPY --from=graalvm /home/app/mn-sample-api .
+ENTRYPOINT ["./mn-sample-api"]
